# JustDeleteMe

./: .gitmodules  README.md  build.gradle  gradle.properties
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/jni/: CMakeLists.txt
app/jni/src/: kurt_jni.c  kurt_jni.h  lowerize.c  lowerize.h  unaccent.c  unaccent.h  unwhitespace.c  unwhitespace.h  we.h  we_entries.h  we_paging.h  we_results.c  we_results.h  we_search.c  we_search.h
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: card_view_shape.xml
app/src/main/res/layout/: activity_main.xml  difficulty_info_dialog.xml  website_entries_fragment.xml  website_entry.xml  website_entry_search_dialog.xml
app/src/main/res/menu/: bottom_navigation_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values-ar/: notes.xml  strings.xml
app/src/main/res/values-bg/: notes.xml  strings.xml
app/src/main/res/values-ca/: notes.xml  strings.xml
app/src/main/res/values-cs/: notes.xml  strings.xml
app/src/main/res/values-da/: notes.xml  strings.xml
app/src/main/res/values-de/: notes.xml  strings.xml
app/src/main/res/values-el/: notes.xml  strings.xml
app/src/main/res/values-es/: notes.xml  strings.xml
app/src/main/res/values-fa/: notes.xml  strings.xml
app/src/main/res/values-fr/: notes.xml  strings.xml
app/src/main/res/values-ga/: notes.xml  strings.xml
app/src/main/res/values-hi/: notes.xml  (+1 more)
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
tools/: update.sh  utils.py  we_entries.h.py
(+52 files in other folders)
